--- a/SavesRecap/MainWindow.xaml
+++ b/SavesRecap/MainWindow.xaml
@@ -7,7 +7,8 @@
         Style="{StaticResource MaterialDesignWindow}"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="500" Width="400">
+        Icon="Resources/Img/ico_png.png"
+        Title="Saves Recap" Height="500" Width="400">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -71,6 +72,8 @@
                            FontSize="10"
                            HorizontalAlignment="Center" 
                            Margin="0,20,0,0"/>
+                <Image Source="/Resources/Img/ico_png.png"
+                       Width="100"/>
             </StackPanel>
         </Grid>
 
